feat : update user service input format
